[put-fix-btn-on-mobile] Fix btn sandbox on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1746,11 +1746,11 @@ h1, h2, h3, h4:not(.docs-doc-id-API\/api-reference) {
   }
 }
 
-.desktop-only { display: none; }
+.desktop-only { display: none !important; }
 
 @media(min-width: 1024px) {
   .desktop-only {
-    display: grid;
+    display: grid !important;
   }
 
   .mobile-only {
